- fixed issue with header position of content, changed flex align-item property

--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -12,14 +12,24 @@
     .dft-navbar {
         background-color: @white;
         height: @header-height;
+        /**/
+        padding: 0;
+        align-items: flex-start;
+        // fix for navbar container flex child vertical position
+        & > .container {
+            align-items: flex-start;
+        }
+        /**/
         @media @lsmscreen {
             height: @header-height-mobile;
+            padding: 0 1rem;
         }
     }
     // set logo height equal to header height
     .dft-logo {
         // set z-index for logo to be displayed above the lines corresponding to design
         z-index: 3;
+        padding: 0;
         .dft-logo-wrap {
             height: @dft-logo-desktop;
             @media @lsmscreen {
@@ -107,6 +117,9 @@
         // set on focus behaviour to remove outline effect on button
         &:focus {
             outline: none;
+        }
+        @media @lsmscreen {
+            margin-top: .5rem;
         }
     }
 
